--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
       <img src="assets/img/banner-ico.png" width="30" height="30" alt="">
     SpotiApp
@@ -12,7 +12,7 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="home">Inicio</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="search">Buscar</a>
       </li>
       
