--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,5 +3,5 @@
     <input #term type="text" (keyup)="search(term.value)" class="form-control" placeholder="Buscar artista...">
   </div>
 </div>
-
+<app-loading *ngIf="loading" class="m-5"></app-loading>
 <app-cards [items]="artists"></app-cards>
