--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,4 +1,4 @@
-<div class="card-columns m-5">
+<div class="card-columns m-5 animated fadeIn" >
     
   <div class="card" *ngFor="let item of items; let i = index">
     <img [src]="item.images | noimage" class="card-img-top" alt="...">
