--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,3 +1,17 @@
-<p>
-  artist works!
-</p>
+<app-loading *ngIf="loading"></app-loading>
+<div *ngIf = "!loading"  class = "row">
+  <div class="col-2">
+    <img [src]="artist.images | noimage" class="img-thumbnail img-circle">    
+  </div>
+  <div class="col">
+    <h3>{{ artist.name }}</h3>
+    <p>
+      <a [href]="artist.external_urls.spotify" target="_blank">
+        Ir a la página del artista
+      </a>
+    </p>
+  </div>
+  <div class="col-4 text-right">
+    <button class="btn btn-outline-danger" routerLink="/search">Regresar</button>
+  </div>
+</div>
