--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,5 +1,5 @@
 <app-loading *ngIf="loading"></app-loading>
-<div *ngIf = "!loading"  class = "row">
+<div *ngIf = "!loading"  class="row animated fadeIn">
   <div class="col-2">
     <img [src]="artist.images | noimage" class="img-thumbnail img-circle">    
   </div>
@@ -13,5 +13,33 @@
   </div>
   <div class="col-4 text-right">
     <button class="btn btn-outline-danger" routerLink="/search">Regresar</button>
+  </div>
+</div>
+
+<div *ngIf = "!loading" class="row m-5">
+  <div class="col">
+
+      <table class="table">
+        <thead>
+            <tr>
+              <th>Foto</th>
+              <th>Album</th>
+              <th>canción</th>
+              <th>Vista Previa</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr *ngFor="let track of topTracks">
+              <td><img [src]="track.album.images | noimage" class="img-thumb"></td>
+              <td>{{ track.album.name }}</td>
+              <td>{{ track.name }}</td>
+              <td *ngIf="track.preview_url !== null">
+                  <iframe [src]="track.uri | domseguro"
+                          width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+              </td>
+            </tr>
+        </tbody>
+      </table>
   </div>
 </div>
