--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,9 @@
 <app-loading *ngIf="loading" ></app-loading>
+<div class="alert alert-danger animated fadeIn">
+    <h3>Error</h3>
+    <p>
+        Hubo un error.
+    </p>
+    
+</div>
 <app-cards [items]="newReleases"></app-cards>
