--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-loading *ngIf="loading" ></app-loading>
-<div class="alert alert-danger animated fadeIn">
+<div *ngIf="error" class="alert alert-danger animated fadeIn">
     <h3>Error</h3>
     <p>
         Hubo un error.
